Display fixes on mobile

--- a/Resources/public/css/custom.css
+++ b/Resources/public/css/custom.css
@@ -7,13 +7,11 @@ html {
 
 body {
     color: #73879c;
-    background: #f7f7f7;
+    background: #2A3F54;
     font-family: "Helvetica Neue", Roboto, Arial, "Droid Sans", sans-serif;
     font-size: 13px;
     font-weight: 400;
     line-height: 1.471;
-    position: relative;
-    height: 100vh;
 }
 
 .nav-md .main_container .col-md-3.left_col, .nav-sm .main_container .col-md-3.left_col {
